src/bin/snapshots/snapshots__Stmt.Global.oid.arithmetic.oid.add.input.snap
---
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Stmt::Static {
        init: Expr {
            kind: ExprKind::Binary {
                left: Expr {
                    kind: ExprKind::OidCall {
                        oid: OidArgs {
                            value: [
                                OidSegment {
                                    seg: _,
                                },
                            ],
                        },
                    },
                },
                op: BinaryOp::Add,
                right: Expr {
                    kind: ExprKind::Binary {
                        left: Expr {
                            kind: ExprKind::OidCall {
                                oid: OidArgs {
                                    value: [
                                        OidSegment {
                                            seg: _,
                                        },
                                    ],
                                },
                            },
                        },
                        op: BinaryOp::Add,
                        right: Expr {
                            kind: ExprKind::OidCall {
                                oid: OidArgs {
                                    value: [
                                        OidSegment {
                                            seg: _,
                                        },
                                    ],
                                },
                            },
                        },
                    },
                },
            } | ExprKind::Binary {
                left: Expr {
                    kind: ExprKind::Binary {
                        left: Expr {
                            kind: ExprKind::OidCall {
                                oid: OidArgs {
                                    value: [
                                        OidSegment {
                                            seg: _,
                                        },
                                    ],
                                },
                            },
                        },
                        op: BinaryOp::Add,
                        right: Expr {
                            kind: ExprKind::OidCall {
                                oid: OidArgs {
                                    value: [
                                        OidSegment {
                                            seg: _,
                                        },
                                    ],
                                },
                            },
                        },
                    },
                },
                op: BinaryOp::Add,
                right: Expr {
                    kind: ExprKind::OidCall {
                        oid: OidArgs {
                            value: [
                                OidSegment {
                                    seg: _,
                                },
                            ],
                        },
                    },
                },
            },
        },
    },
)
