src/bin/snapshots/snapshots__Stmt.Global.oid.input.snap
---
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Stmt::Static {
        init: Expr {
            kind: ExprKind::OidCall {
                oid: OidArgs {
                    value: [
                        OidSegment {
                            seg: _,
                        },
                    ],
                },
            },
        },
    },
)
