src/bin/snapshots/snapshots__Stmt.Global.self.addr.gateway.input.snap
---
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Stmt::Static {
        init: Expr {
            kind: ExprKind::SelfField {
                field: SelfField {
                    addr: {
                        func: SelfAddrFunction::Gateway,
                    },
                },
            },
        },
    },
)
